# milim-2d

./: Cargo.toml  README.md
app/src/: main.rs
example/: Cargo.toml
example/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: base.rs  bitmap.rs  colision.rs  collision.rs  context.rs  core.rs  engine.rs  events.rs  input.rs  lib.rs  mailbox.rs  resources.rs  scene.rs
src/components/: body.rs  camera.rs  colision.rs  collision.rs  mod.rs  sprite.rs
src/math/: mod.rs  rect.rs  transform.rs  vec2.rs
src/renderer/: adapter.rs  color.rs  mod.rs  sdl2_adapter.rs
src/resources/: mod.rs
